# k3s-agent-operator

./: .gitignore  Dockerfile  Makefile  controller.py  pyproject.toml
.github/workflows/: docker.yaml
crds/v1alpha1/: agent.yaml  sshcredential.yaml
hack/: agent.yaml  agent2.yaml
